--- a/difla/package.json
+++ b/difla/package.json
@@ -1,12 +1,11 @@
 {
-  "homepage": "https://salvinastaukevicius.github.io/DIFLA/",
   "name": "difla",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -21,5 +20,6 @@
     "@vitejs/plugin-react": "^2.2.0",
     "gh-pages": "^6.1.1",
     "vite": "^3.2.3"
-  }
+  },
+  "homepage": "https://salvinastaukevicius.github.io/DIFLA/"
 }
