--- a/difla/package.json
+++ b/difla/package.json
@@ -1,11 +1,12 @@
 {
+  "homepage": "https://salvinastaukevicius.github.io/DIFLA/",
   "name": "difla",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -20,6 +21,5 @@
     "@vitejs/plugin-react": "^2.2.0",
     "gh-pages": "^6.1.1",
     "vite": "^3.2.3"
-  },
-  "homepage": "https://salvinastaukevicius.github.io/DIFLA/"
+  }
 }
