--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://salvinastaukevicius.github.io/DIFLA/",
+  "homepage": "https://salvinastaukevicius.github.io/DIFLA",
   "name": "difla",
   "private": true,
   "version": "0.0.0",
