--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "gh-pages": "^6.1.1",
+    "push-dir": "^0.4.1",
     "vite": "^3.2.3"
   }
 }
